--- a/pom.xml
+++ b/pom.xml
@@ -18,10 +18,6 @@
   </scm>
 
   <repositories>
-    <repository>
-      <id>sk89q-mvn2</id>
-      <url>http://mvn2.sk89q.com/repo</url>
-    </repository>
   </repositories>
 
   <dependencies>
@@ -29,14 +25,18 @@
     <dependency>
       <groupId>com.sk89q</groupId>
       <artifactId>worldedit</artifactId>
-      <version>4.7</version>
+      <version>4.7-snapshot</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/lib/worldedit-4.7-SNAPSHOT.jar</systemPath>
     </dependency>
 
     <!-- Bukkit -->
     <dependency>
-      <groupId>org.bukkit</groupId>
-      <artifactId>bukkit</artifactId>
-      <version>0.0.1-SNAPSHOT</version>
+      <groupId>ru.vladthemountain</groupId>
+      <artifactId>lilybukkit-api</artifactId>
+      <version>1.1.2</version>
+      <scope>system</scope>
+      <systemPath>${project.basedir}/lib/lilybukkit-api-1.1.2.jar</systemPath>
     </dependency>
 
     <!-- Other dependencies -->
